--- a/http-01-start/src/app/app.component.html
+++ b/http-01-start/src/app/app.component.html
@@ -58,7 +58,12 @@
           <p>{{ post.content }}</p>
         </li>
       </ul>
-      <p *ngIf="isFetching">Loading...</p>
+      <p *ngIf="isFetching && !error">Loading...</p>
+      <div *ngIf="error" class="alert alert-danger">
+        <h3>An error ocurred!</h3>
+        <p>{{ error }}</p>
+        <button class="btn btn-danger" (click)="onHandleError()">Ok</button>
+      </div>
     </div>
   </div>
 </div>
