--- a/BasicsProject/src/app/header/header.component.html
+++ b/BasicsProject/src/app/header/header.component.html
@@ -9,6 +9,9 @@
         <li routerLinkActive="active">
           <a routerLink="/shopping">Shopping List</a>
         </li>
+        <li routerLinkActive="active">
+          <a routerLink="/auth">Authenticate</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
@@ -16,8 +19,12 @@
             Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a style="cursor: pointer">Save Data</a></li>
-            <li><a style="cursor: pointer">Fetch Data</a></li>
+            <li>
+              <a style="cursor: pointer" (click)="onSaveData()">Save Data</a>
+            </li>
+            <li>
+              <a style="cursor: pointer" (click)="onFetchData()">Fetch Data</a>
+            </li>
           </ul>
         </li>
       </ul>
